test/valid/array-length.js
var a = [1,2,3];
a.length;
