test/invalid/array-assign.js
var arr = [];
arr[0] = 1;
arr[1] = 'a';
